# bsp-pathfinding

./: .dispatch.json  Cargo.toml  LICENSE  README.md  recipes.json
.github/workflows/: rust.yml
examples/: demo.rs  layered.rs
src/: heuristics.rs  layered_context.rs  lib.rs  main.rs  navigation_context.rs  shape.rs  traits.rs  util.rs  world.rs
src/astar/: mod.rs
src/tree/: edges.rs  mod.rs  node.rs  portal.rs  portals.rs
tests/: serde.rs  tests.rs
