[package]
name = "bsp-path-finding"
version = "0.1.0"
edition = "2021"
desciption = "Runtime path finding using Binary Spatial Partitioning"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.14"
slotmap = "1.0.6"

[dev-dependencies]
macroquad = "0.3.13"
