[package]
name = "bsp-path-finding"
version = "0.1.0"
edition = "2021"
description = "Runtime path finding using Binary Spatial Partitioning"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.14"
ordered-float = "2.8.0"
slotmap = "1.0.6"
smallvec = "1.7.0"

[dev-dependencies]
macroquad = "0.3.13"
