[package]
name = "bsp-pathfinding"
version = "0.1.6"
edition = "2021"
authors = [ "Tei Roberts" ]
documentation = "https://docs.rs/bsp-pathfinding"
repository = "https://github.com/ten3roberts/bsp-pathfinding"
description = "Runtime path finding using Binary Spatial Partitioning"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

glam = "0.20.2"
ordered-float = "2.10.0"
rand = "0.8.4"
rpds = "0.11.0"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
slotmap = "1.0.6"
smallvec = "1.8.0"

[dev-dependencies]
macroquad = "0.3.13"
serde_json = "1.0.78"

[ features ]
serialize = [ "serde", "glam/serde", "slotmap/serde", "smallvec/serde" ]
